--- a/radAR2/app/src/main/res/layout/activity_ar2.xml
+++ b/radAR2/app/src/main/res/layout/activity_ar2.xml
@@ -19,13 +19,10 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="83dp"
+        android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        tools:layout_editor_absoluteX="8dp">
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -43,12 +40,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="24dp"
-                android:text="Heading" />
+                android:text="Heading"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/HUD_heading"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:textSize="24dp" />
 
         </LinearLayout>
@@ -85,7 +84,6 @@
                             android:id="@+id/HUD_distance_to_dest"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="200"
                             android:textAlignment="center"
                             android:textSize="36dp" />
 
@@ -93,8 +91,7 @@
                             android:id="@+id/HUD_distance_unit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingRight="8dp"
-                            android:text="m" />
+                            android:paddingRight="8dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -104,8 +101,7 @@
                         <TextView
                             android:id="@+id/HUD_relative_compass_direction"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="west" />
+                            android:layout_height="wrap_content" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -122,7 +118,6 @@
             android:layout_below="@+id/HUD_main"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="8dp"
-            android:text="to South Lawn"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:layout_editor_absoluteX="0dp" />
