More layout changes

--- a/radAR2/app/src/main/res/layout/activity_ar2.xml
+++ b/radAR2/app/src/main/res/layout/activity_ar2.xml
@@ -47,6 +47,7 @@
                 android:id="@+id/HUD_heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="N"
                 android:textAlignment="center"
                 android:textSize="24dp" />
 
