--- a/radAR2/app/src/main/res/layout/ar_annotation.xml
+++ b/radAR2/app/src/main/res/layout/ar_annotation.xml
@@ -8,6 +8,7 @@
         android:id="@+id/ARAnnotation_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:text="TestLayout"/>
 
 </RelativeLayout>
