--- a/radAR2/app/src/main/res/layout/activity_search_location.xml
+++ b/radAR2/app/src/main/res/layout/activity_search_location.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="radar.radar.PlaceActivity">
+    tools:context="radar.radar.SearchLocationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,12 +14,12 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/add_new_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:background="@color/colorPrimary"
             android:text="Add New Location"
-            android:onClick="onAddPlaceButtonClicked"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@android:color/white" /><!-- text: Add New Location -->
 
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Locations List"
+            android:text="Location Selected"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/colorPrimaryDark" /><!-- text: Locations -->
 
@@ -35,11 +35,21 @@
             android:layout_width="fill_parent"
             android:layout_height="2dip"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="12dp"
             android:background="@color/colorPrimary" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/places_list_recycler_view"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/place_details"
+            android:autoLink="all"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/place_attribution"
+            android:autoLink="all"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
