--- a/radAR2/app/src/main/res/layout/row_chat.xml
+++ b/radAR2/app/src/main/res/layout/row_chat.xml
@@ -45,14 +45,27 @@ android:layout_height="wrap_content">
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/row_recent_message"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="Recent Message"
-                android:textColor="@android:color/darker_gray"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/row_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:text="Conversation Type: "
+                    android:textColor="@android:color/darker_gray"
+                    />
+
+                <TextView
+                    android:id="@+id/row_type_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Chat"
+                    android:textColor="@android:color/darker_gray"
                 />
+            </LinearLayout>
 
         </LinearLayout>
 
