--- a/radAR2/app/src/main/res/layout/chat_bubble_received.xml
+++ b/radAR2/app/src/main/res/layout/chat_bubble_received.xml
@@ -11,14 +11,14 @@ android:paddingTop="8dp">
     android:id="@+id/image_message_profile"
     android:layout_width="32dp"
     android:layout_height="32dp"
-    android:background="@drawable/ic_android_black_18dp"
+    android:background="@mipmap/ic_launcher"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent" />
 
 <TextView
     android:id="@+id/text_message_name"
-    android:text="John Doe"
+    android:text="Maleakhi Wijaya"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="12sp"
