--- a/radAR2/app/src/main/res/layout/activity_ar2.xml
+++ b/radAR2/app/src/main/res/layout/activity_ar2.xml
@@ -118,14 +118,25 @@
         <TextView
             android:id="@+id/HUD_destination_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_below="@+id/HUD_main"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dp"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/HUD_buttons_layout"
             tools:layout_editor_absoluteX="0dp" />
 
+        <LinearLayout
+            android:id="@+id/HUD_buttons_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/HUD_destination_name"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent">
+        </LinearLayout>
+
     </android.support.constraint.ConstraintLayout>
+
 
 </android.support.constraint.ConstraintLayout>
