--- a/radAR2/app/src/main/res/layout/activity_chat_list.xml
+++ b/radAR2/app/src/main/res/layout/activity_chat_list.xml
@@ -8,12 +8,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chatRecyclerView"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="0dp"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
