Update navigation bar styling

--- a/radAR2/app/src/main/res/values/styles.xml
+++ b/radAR2/app/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
+        <item name="itemIconTint">@android:color/darker_gray</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
