--- a/radAR2/app/src/main/res/menu/drawer_common.xml
+++ b/radAR2/app/src/main/res/menu/drawer_common.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="none"
+        android:id="@+id/navdrawer_top">
         <item
             android:id="@+id/nav_maps"
             android:icon="@drawable/ic_menu_slideshow"
@@ -23,17 +24,22 @@
             android:title="Friends" />
     </group>
 
-    <item android:title="Options">
-        <menu>
-            <item
-                android:id="@+id/nav_settings"
-                android:icon="@drawable/ic_settings_black_24dp"
-                android:title="Settings" />
-            <item
-                android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_exit_to_app_black_48dp"
-                android:title="Logout" />
-        </menu>
-    </item>
+    <group android:checkableBehavior="none"
+        android:id="@+id/navdrawer_bottom">
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="Settings" />
+
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_exit_to_app_black_48dp"
+            android:title="Logout" />
+    </group>
+
+
+
+
+
 
 </menu>
