--- a/radAR2/app/src/main/res/layout/fragment_group_details.xml
+++ b/radAR2/app/src/main/res/layout/fragment_group_details.xml
@@ -50,6 +50,7 @@
         >
 
         <TextView
+            android:id="@+id/group_detail_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
