--- a/radAR2/app/src/main/res/layout/activity_group_detail.xml
+++ b/radAR2/app/src/main/res/layout/activity_group_detail.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent">
 
         <android.support.v7.widget.Toolbar
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:id="@+id/group_detail_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
