--- a/radAR2/app/src/main/res/layout/fragment_group_locations.xml
+++ b/radAR2/app/src/main/res/layout/fragment_group_locations.xml
@@ -2,5 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:text="AR view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:id="@+id/start_tracking_in_AR" />
+            <Button
+                android:text="Map view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:id="@+id/go_to_mapView" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
