--- a/radAR2/app/src/main/res/layout/activity_chat.xml
+++ b/radAR2/app/src/main/res/layout/activity_chat.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="radar.radar.ChatActivity">
+    tools:context="radar.radar.ChatActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messageRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@id/layout_chatbox"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.RecyclerView>
 
     <!-- A horizontal line between the chatbox and RecyclerView -->
     <View
+        android:id="@+id/view2"
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:background="#dfdfdf"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
     <LinearLayout
         android:id="@+id/layout_chatbox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:background="@color/colorPrimaryDark"
         android:minHeight="48dp"
-        android:background="#ffffff"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <EditText
             android:id="@+id/chat_text_field"
@@ -47,18 +48,36 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:hint="Enter message"
-            android:maxLines="6" />
+            android:maxLines="6"
+            android:textColor="#e7f0f4"
+            android:textColorHint="#b7bfc2" />
 
-        <Button
+        <ImageButton
+            android:id="@+id/button_send_attachment"
+            android:layout_width="64dp"
+            android:layout_height="24dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="12dp"
+            android:layout_marginTop="12dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:scaleType="fitCenter"
+            android:tint="@color/gray"
+            app:srcCompat="@drawable/ic_attach_file_black_48dp" />
+
+        <ImageButton
             android:id="@+id/button_send"
             android:layout_width="64dp"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:focusable="true"
             android:gravity="center"
-            android:text="SEND"
-            android:textSize="14dp" />
+            android:src="@android:drawable/ic_menu_send"
+            android:tint="@color/colorWhite" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
