--- a/radAR2/app/src/main/res/values/colors.xml
+++ b/radAR2/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="text_color_primary">#ffffff</color>
     <color name="foreground_material_light">#e8e8e8</color>
     <color name="gray">#9E9E9E</color>
+    <color name="gray_tint">#4e4e4e</color>
 </resources>
