--- a/radAR2/app/src/main/res/layout/row_chat.xml
+++ b/radAR2/app/src/main/res/layout/row_chat.xml
@@ -1,79 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical" android:layout_width="match_parent"
-android:layout_height="wrap_content">
 
-<android.support.v7.widget.CardView
-    android:id="@+id/cardView"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    >
+    android:paddingLeft="@dimen/recyclerView_padding_small"
+    android:paddingRight="@dimen/recyclerView_padding_small"
+    android:paddingTop="@dimen/row_padding"
 
-    <RelativeLayout
-        android:padding="8dp"
-        android:layout_width="match_parent"
+    android:background="@color/colorWhite">
+
+    <!--We can add content of the cardview here -->
+    <ImageView
+        android:id="@+id/row_profile_picture"
+        android:layout_width="@dimen/group_img_size"
+        android:layout_height="@dimen/group_img_size"
+        android:contentDescription="Profile picture"
+        android:src="@drawable/img" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        >
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:id="@+id/row_search_name"
+        android:layout_toEndOf="@+id/row_profile_picture"
+        android:layout_marginStart="8dp">
 
-        <!--We can add content of the cardview here -->
-        <ImageView
-            android:id="@+id/row_profile_picture"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/img"
-            android:contentDescription="Profile picture"
-            android:src="@mipmap/ic_launcher" />
-
-        <LinearLayout
-            android:layout_marginTop="15dp"
+        <TextView
+            android:id="@+id/row_chat_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/row_search_name"
-            android:layout_toRightOf="@+id/row_profile_picture"
-            android:layout_marginLeft="5dp">
+            android:text="Name"
+            android:layout_marginBottom="2dp"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/name_font_size" />
+
+        <LinearLayout
+            android:layout_marginTop="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/row_chat_name"
+                android:id="@+id/last_message_from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="Name"
-                android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:text="Kenneth: "
+                android:textColor="@color/colorPrimary" />
 
-            <LinearLayout
+            <TextView
+
+                android:id="@+id/row_type_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/row_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:text="Conversation Type: "
-                    android:textColor="@android:color/darker_gray"
-                    />
-
-                <TextView
-                    android:id="@+id/row_type_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Chat"
-                    android:textColor="@android:color/darker_gray"
-                />
-            </LinearLayout>
-
+                android:text="Chat"
+                android:textColor="@android:color/darker_gray"
+            />
         </LinearLayout>
 
+    </LinearLayout>
 
-    </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</RelativeLayout>
 
-</LinearLayout>
+
