More layout changes, fix hour/minute < 10

--- a/radAR2/app/src/main/res/layout/content_friends.xml
+++ b/radAR2/app/src/main/res/layout/content_friends.xml
@@ -20,10 +20,9 @@
             android:id="@+id/friends_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="5dp"
+            android:paddingTop="@dimen/recyclerView_padding_small"
+            android:paddingBottom="@dimen/recyclerView_padding_small"
+            android:clipToPadding="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
