--- a/radAR2/app/src/main/res/layout/content_chat_list.xml
+++ b/radAR2/app/src/main/res/layout/content_chat_list.xml
@@ -14,6 +14,9 @@
         android:id="@+id/chatRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingTop="@dimen/recyclerView_padding_small"
+        android:paddingBottom="@dimen/recyclerView_padding_small"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
