--- a/radAR2/app/src/main/res/layout/content_home_screen.xml
+++ b/radAR2/app/src/main/res/layout/content_home_screen.xml
@@ -9,214 +9,13 @@
     tools:context="radar.radar.HomeScreenActivity"
     tools:showIn="@layout/app_bar_home_screen">
 
-    <TextView
-        android:id="@+id/home_radar"
+    <fragment
+        android:id="@+id/home_screen_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_marginBottom="3dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:text="Recent Chat"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.044" />
+        android:layout_height="match_parent"
+        tools:context="radar.radar.HomeScreenActivity" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
 
-        <RelativeLayout
-            android:padding="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
-            <!--We can add content of the cardview here -->
-            <ImageView
-                android:id="@+id/chatID"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@android:color/background_dark"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/chatTitleID"
-                android:layout_centerHorizontal="true"
-                android:textStyle="bold"
-                android:text="Oxygen"
-                android:paddingLeft="5dp"
-                android:layout_toRightOf="@id/chatID"
-                />
-
-            <TextView
-                android:id="@+id/chatOnlineID"
-                android:layout_toRightOf="@id/chatID"
-                android:layout_below="@id/chatTitleID"
-                android:paddingLeft="5dp"
-                android:text="Online"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <RelativeLayout
-            android:padding="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
-            <!--We can add content of the cardview here -->
-            <ImageView
-                android:id="@+id/chatID2"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@android:color/holo_green_dark"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/chatTitleID2"
-                android:layout_centerHorizontal="true"
-                android:textStyle="bold"
-                android:text="Maleakhi"
-                android:paddingLeft="5dp"
-                android:layout_toRightOf="@id/chatID2"
-                />
-
-            <TextView
-                android:id="@+id/chatOnlineID2"
-                android:layout_toRightOf="@id/chatID2"
-                android:layout_below="@id/chatTitleID2"
-                android:paddingLeft="5dp"
-                android:text="Online"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <TextView
-        android:id="@+id/recent_group"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_marginBottom="3dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:text="Recent Tracking Group"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.044" />
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/card3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <RelativeLayout
-            android:padding="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
-            <!--We can add content of the cardview here -->
-            <ImageView
-                android:id="@+id/chatID3"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@android:color/darker_gray"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/chatTitleID3"
-                android:layout_centerHorizontal="true"
-                android:textStyle="bold"
-                android:text="COMP20003"
-                android:paddingLeft="5dp"
-                android:layout_toRightOf="@id/chatID3"
-                />
-
-            <TextView
-                android:id="@+id/chatOnlineID3"
-                android:layout_toRightOf="@id/chatID3"
-                android:layout_below="@id/chatTitleID3"
-                android:paddingLeft="5dp"
-                android:text="Online"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <RelativeLayout
-            android:padding="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
-            <!--We can add content of the cardview here -->
-            <ImageView
-                android:id="@+id/chatID4"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@mipmap/ic_launcher"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/chatTitleID4"
-                android:layout_centerHorizontal="true"
-                android:textStyle="bold"
-                android:text="COMP20004"
-                android:paddingLeft="5dp"
-                android:layout_toRightOf="@id/chatID4"
-                />
-
-            <TextView
-                android:id="@+id/chatOnlineID4"
-                android:layout_toRightOf="@id/chatID4"
-                android:layout_below="@id/chatTitleID4"
-                android:paddingLeft="5dp"
-                android:text="Online"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
