--- a/radAR2/app/src/main/res/layout/activity_chat.xml
+++ b/radAR2/app/src/main/res/layout/activity_chat.xml
@@ -12,11 +12,12 @@
         android:id="@+id/messageRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="@dimen/recyclerView_padding_small"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toTopOf="@id/layout_chatbox"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.RecyclerView>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <!-- A horizontal line between the chatbox and RecyclerView -->
     <View
@@ -31,7 +32,7 @@
         android:id="@+id/layout_chatbox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:minHeight="52dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,15 +55,17 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginRight="16dp">
+
             <ImageButton
                 android:id="@+id/button_send_attachment"
-                android:layout_width="64dp"
+                android:layout_width="wrap_content"
                 android:layout_height="24dp"
+                android:layout_centerVertical="true"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                android:layout_centerVertical="true"
                 android:gravity="center"
                 android:scaleType="fitCenter"
                 android:tint="@color/gray"
@@ -70,16 +73,17 @@
 
             <ImageButton
                 android:id="@+id/button_send"
-                android:layout_toRightOf="@id/button_send_attachment"
-                android:layout_width="64dp"
-                android:layout_height="48dp"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_centerVertical="true"
                 android:layout_gravity="bottom"
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@id/button_send_attachment"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                android:layout_centerVertical="true"
                 android:gravity="center"
-                android:src="@android:drawable/ic_menu_send"
+                android:src="@drawable/ic_send_white_24dp"
                 android:tint="@color/colorWhite" />
         </RelativeLayout>
 
